# tagistry

./: .dockerignore  .gitignore  Dockerfile  dev.sh  docker-build-x.sh  docker-compose.yml  name_project.py  pyproject.toml  stage_down.sh  stage_up.sh
.github/workflows/: deploy.yml
app/: main.py
app/api/: api.py
app/api/v1/: content_file_dir.py  content_file_path.py  rule_set_dir.py  v1.py
app/constant/: __init__.py  swagger_tags.py  url.py
app/core/: fastapi_skeleton.py  tagistry.py
app/core/config/: __init__.py  config.py  env.py  logging.py
app/core/constant/: __init__.py  swagger_tags.py
app/exception/: __init__.py  content_import_exception.py  domain_exception.py  rule_set_import_exception.py  tags_sanitizing_exception.py
app/model/domain/: __init__.py  content_file.py  content_validation_summary.py  tag.py
app/model/env/: __init__.py  app_status.py  profile.py  role.py
app/model/persistence/: __init__.py  tag_json_model.py  tag_json_object.py
app/rest/: __init__.py  health.py
app/rest/api/: api.py
app/rest/api/v1/: example.py  rule_set.py  rule_set_dir.py  v1.py
app/service/: __init__.py  content_file.py  provider.py  rule_set.py
