[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [{ name = "Tom Vautray" }]
description = ""
name = "fastapi_skeleton"
version = "0.0.1-pre"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
authors = ["Tom Vautray"]
description = ""
name = "fastapi_skeleton"
version = "0.0.1-pre"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.118.0"
uvicorn = { extras = ["standard"], version = "^0.37.0" }
pydantic = "^2.11.9"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
mypy = "^0.931"
isort = "^5.10.1"
flake8 = "^5.0.4"
commitizen = "^0.9.2"

[tool.poetry.scripts]
# Optional: define CLI entry points
# app = "app.__main__:main"

[tool.poetry.build]
generate-setup-file = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
